<resources>
    <string name="app_name">Orchestrate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dialog_title_edit">Edit: %1$s</string>
    <string name="dialog_title_create">Create Company</string>
    <string name="assign_device_to_company">Assign Device to Company</string>
    <string name="select_company">Select Company</string>
    <string name="cancel">Cancel</string>
    <string name="assign">Assign</string>
    <string name="assign_device_to_employee">Assign Device to Employee</string>
    <string name="select_employee">Select Employee</string>
    <string name="employee">Employee</string>
    <string name="company">Company</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="company_name">Company Name</string>
    <string name="address">Address</string>
    <string name="create">Create</string>
    <string name="device">Device</string>
    <string name="device_serial_number">Device Serial Number</string>
    <string name="device_name">Device Name</string>
    <string name="type">Type</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete</string>
    <string name="delete_device">Delete Device</string>
    <string name="add">Add</string>
    <string name="unassign">Unassign</string>
    <string name="unassign_device">Unassign Device</string>
    <string name="are_you_sure_you_want_to_unassign_this_device_from_employee">Are you sure you want to unassign this device from employee: </string>
    <string name="company_id">Company ID</string>
    <string name="update">Update</string>
    <string name="serial_number">Serial Number</string>
    <string name="name">Name</string>
    <string name="no_employees_found_for_this_company">No employees found for this company</string>
    <string name="close">Close</string>
    <string name="edit_device">Edit Device</string>
    <string name="employee_id">Employee ID</string>
    <string name="email">Email</string>
    <string name="update_employee">Update Employee</string>
    <string name="delete_employee">Delete Employee</string>
    <string name="assign_employee_to_company">Assign employee to company</string>
    <string name="assign_employee">Assign Employee</string>
    <string name="unassign_employee">Unassign Employee</string>
    <string name="are_you_sure_you_want_to_unassign_this_employee_from_company">"Are you sure you want to unassign this employee from company: "</string>
</resources>